--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="botonNewsletter">
     <input type="button" value="¡Registrate en nuestro Newsletter y recibe las mejores ofertas!" class="btn btn-primary" id="botonNewsletter">
     <div>
-      <form id="formulario" style="display:none"> 
+      <form id="formulario"> 
          <input type="text" id="nombreUser" placeholder="Ingrese su nombre">
          <input type="email" id="mailUser" placeholder="Ingrese su mail"> 
          <input type="button" id="btnSubmit" value="Enviar" id="btnSubmit">
@@ -36,9 +36,8 @@
   </div>
   <div id="contenedorCards"></div>
   <div class="verCarrito"><input type="button" value="Ver Carrito de Compras" id="verCarrito" class="btn btn-primary"> </div>
-  <div id="carritoCompra" style="display:none" class="carrito"></div>
-  <div id="paraFinalizarCompra" style="display:none"></div>
-  <script src="class&ObjetosEnJS.js"></script>
+  <div id="carritoCompra"></div>
+  <div id="paraFinalizarCompra"></div>
   <script src="script.js"></script>
 </body>
 </html>
