--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <input type="button" value="¡Registrate en nuestro Newsletter y recibe las mejores ofertas!" class="btn btn-primary" id="botonNewsletter">
     <div>
       <form id="formulario"> 
-         <input type="text" id="nombreUser" placeholder="Ingrese su nombre">
-         <input type="email" id="mailUser" placeholder="Ingrese su mail"> 
-         <input type="button" id="btnSubmit" value="Enviar" id="btnSubmit">
+         <input type="text" class="input" id="nombreUser" placeholder="Ingrese su nombre">
+         <input type="email" class="input" id="mailUser" placeholder="Ingrese su mail"> 
+         <input type="button" class="input" id="btnSubmit" value="Enviar" id="btnSubmit">
       </form>
     </div>
   </div>
