--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
   <main id="titulo" class="colorFondo"></main>
   <div class="botonNewsletter">
-    <input type="button" value="¡Registrate en nuestro Newsletter y recibe las mejores ofertas!" class="btn btn-primary" id="botonNewsletter">
+    <input type="button" value="¡Registrate en nuestro Newsletter!" class="btn btn-primary" id="botonNewsletter">
     <div>
       <form id="formulario"> 
          <input type="text" class="input" id="nombreUser" placeholder="Ingrese su nombre">
